# dcel

./: .gitignore  Cargo.toml  LICENSE  README.md  conv.sh  x.dot
examples/: animation.rs  cairo.rs  pyramid.rs  subdivision.rs
src/: depth_search_iterator.rs  dot.rs  entity.rs  entity_iterator.rs  img.rs  lib.rs  main.rs  mekh.rs  melf.rs  mev.rs  mevvlfs.rs  mpkh.rs  msev.rs  mve.rs  obj_export.rs  obj_import.rs  tests.rs
utahteapot/: LICENSE.txt  README.txt
