[package]
name = "dcel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
test = ["obj_import", "img", "cairo-rs/svg"]
img = ["dep:cairo-rs", "dep:enumset"]
obj_import = ["dep:obj-rs", "dep:either"]

[dependencies]
enumset = { version = "1", optional = true }
ghost-cell = "0.2"
paste = "1"
typed-arena = "2"
cairo-rs = { version = "0.19.2", optional = true }
thiserror = "1"
obj-rs = { version = "0.7", default-features = false, optional = true }
either = { version = "1", optional = true }
